cpp/syntaxAnalyzer.output
Grammar

    0 $accept: program "EOF"

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | ε

    4 global_declaration: typedef_declaration
    5                   | const_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 typedef_declaration: "typedef" typename listspec "IDENTIFIER" dims ";"

   11 typename: standard_type
   12         | "IDENTIFIER"

   13 standard_type: "char"
   14              | "int"
   15              | "float"
   16              | "void"

   17 listspec: "list"
   18         | ε

   19 dims: dims dim
   20     | ε

   21 dim: "[" "ICONST" "]"
   22    | "[" "]"

   23 const_declaration: "const" typename constdefs ";"

   24 constdefs: constdefs "," constdef
   25          | constdef

   26 constdef: "IDENTIFIER" dims "=" init_value

   27 init_value: expression
   28           | "{" init_values "}"
   29           | "string"

   30 expression: expression "||" expression
   31           | expression "&&" expression
   32           | expression "== or !=" expression
   33           | expression "> or >= or < or <=" expression
   34           | expression "+ or -" expression
   35           | expression "* or / or %" expression
   36           | "!" expression
   37           | "+ or -" expression
   38           | "sizeof" expression
   39           | "++ or --"
   40           | variable "++ or --"
   41           | variable
   42           | variable "(" expression_list ")"
   43           | "length" "(" general_expression ")"
   44           | "new" "(" general_expression ")"
   45           | constant
   46           | "(" general_expression ")"
   47           | "(" standard_type ")"
   48           | listexpression

   49 variable: variable "[" general_expression "]"
   50         | variable "." "IDENTIFIER"
   51         | "list function" "(" general_expression ")"
   52         | decltype "IDENTIFIER"
   53         | "this"

   54 general_expression: general_expression "," general_expression
   55                   | assignment

   56 assignment: variable "=" assignment
   57           | variable "=" "string"
   58           | expression

   59 expression_list: general_expression
   60                | ε

   61 constant: "CCONST"
   62         | "ICONST"
   63         | "FCONST"

   64 listexpression: "[" expression_list "]"

   65 init_values: init_values "," init_value
   66            | init_value

   67 $@1: ε

   68 $@2: ε

   69 class_declaration: "class" "IDENTIFIER" $@1 class_body $@2 ";"

   70 class_body: parent "{" members_methods "}"

   71 parent: ":" "IDENTIFIER"
   72       | ε

   73 members_methods: members_methods access member_or_method
   74                | access member_or_method

   75 access: "private" ":"
   76       | "private" error
   77       | "protected" ":"
   78       | "public" ":"
   79       | ε

   80 member_or_method: member
   81                 | method

   82 member: var_declaration
   83       | anonymous_union

   84 var_declaration: typename variabledefs ";"

   85 variabledefs: variabledefs "," variabledef
   86             | variabledef

   87 variabledef: "list" "IDENTIFIER" dims
   88            | "IDENTIFIER" dims

   89 $@3: ε

   90 $@4: ε

   91 anonymous_union: "union" $@3 union_body $@4 ";"

   92 union_body: "{" fields "}"
   93           | "{" fields error

   94 fields: fields field
   95       | field

   96 field: var_declaration

   97 method: short_func_declaration

   98 short_func_declaration: short_par_func_header ";"
   99                       | nopar_func_header ";"

  100 short_par_func_header: func_header_start "(" parameter_types ")"

  101 func_header_start: typename "IDENTIFIER"
  102                  | "list" "IDENTIFIER"

  103 parameter_types: parameter_types "," typename pass_list_dims
  104                | typename pass_list_dims

  105 pass_list_dims: listspec dims
  106               | "&"

  107 nopar_func_header: func_header_start "(" ")"

  108 $@5: ε

  109 $@6: ε

  110 union_declaration: "union" "IDENTIFIER" $@5 union_body $@6 ";"

  111 global_var_declaration: typename init_variabledefs ";"

  112 init_variabledefs: init_variabledefs "," init_variabledef
  113                  | init_variabledef

  114 init_variabledef: variabledef initializer

  115 initializer: "=" init_value
  116            | ε

  117 func_declaration: short_func_declaration
  118                 | full_func_declaration

  119 full_func_declaration: full_par_func_header "{" decl_statements "}"
  120                      | nopar_class_func_header "{" decl_statements "}"
  121                      | nopar_func_header "{" decl_statements "}"

  122 full_par_func_header: class_func_header_start "(" parameter_list ")"
  123                     | func_header_start "(" parameter_list ")"

  124 class_func_header_start: typename func_class "IDENTIFIER"
  125                        | "list" func_class "IDENTIFIER"

  126 func_class: "IDENTIFIER" "::"

  127 parameter_list: parameter_list "," typename pass_variabledef
  128               | typename pass_variabledef

  129 pass_variabledef: variabledef
  130                 | "&" "IDENTIFIER"

  131 nopar_class_func_header: class_func_header_start "(" ")"

  132 decl_statements: declarations statements
  133                | declarations
  134                | statements
  135                | ε

  136 declarations: declarations decltype typename variabledefs ";"
  137             | decltype typename variabledefs ";"

  138 decltype: "static"
  139         | ε

  140 statements: statements statement
  141           | statement

  142 statement: expression_statement
  143          | if_statement
  144          | while_statement
  145          | for_statement
  146          | return_statement
  147          | io_statement
  148          | comp_statement
  149          | "continue" ";"
  150          | "break" ";"
  151          | ";"

  152 expression_statement: general_expression ";"
  153                     | general_expression error

  154 $@7: ε

  155 $@8: ε

  156 if_statement: "if" "(" $@7 general_expression ")" statement $@8 if_tail
  157             | "if" error general_expression ")" statement if_tail

  158 $@9: ε

  159 if_tail: "else" $@9 statement
  160        | ε

  161 $@10: ε

  162 while_statement: "while" "(" $@10 general_expression ")" statement

  163 $@11: ε

  164 for_statement: "for" "(" $@11 optexpr ";" optexpr ";" optexpr ")" statement

  165 optexpr: general_expression
  166        | ε

  167 return_statement: "return" optexpr ";"

  168 io_statement: "cin" ">>" in_list ";"
  169             | "cout" "<<" out_list ";"

  170 in_list: in_list ">>" in_item
  171        | in_item

  172 in_item: variable

  173 out_list: out_list "<<" out_item
  174         | out_item

  175 out_item: general_expression
  176         | "string"

  177 comp_statement: "{" decl_statements "}"

  178 main_function: main_header "{" decl_statements "}"

  179 main_header: "int" "main" "(" ")"


Terminals, with rules where they appear

    "EOF" (0) 0
    error (256) 76 93 153 157
    "typedef" <str> (258) 10
    "char" <str> (259) 13
    "int" <str> (260) 14 179
    "float" <str> (261) 15
    "const" <str> (262) 23
    "union" <str> (263) 91 110
    "class" <str> (264) 69
    "private" <str> (265) 75 76
    "protected" <str> (266) 77
    "public" <str> (267) 78
    "static" <str> (268) 138
    "void" <str> (269) 16
    "list" <str> (270) 17 87 102 125
    "continue" <str> (271) 149
    "break" <str> (272) 150
    "this" <str> (273) 53
    "if" <str> (274) 156 157
    "else" <str> (275) 159
    "while" <str> (276) 162
    "for" <str> (277) 164
    "return" <str> (278) 167
    "length" <str> (279) 43
    "new" <str> (280) 44
    "cin" <str> (281) 168
    "cout" <str> (282) 169
    "main" <str> (283) 179
    "||" <str> (284) 30
    "&&" <str> (285) 31
    "== or !=" <str> (286) 32
    "> or >= or < or <=" <str> (287) 33
    "+ or -" <str> (288) 34 37
    "* or / or %" <str> (289) 35
    "!" <str> (290) 36
    "++ or --" <str> (291) 39 40
    "sizeof" <str> (292) 38
    "(" <str> (293) 42 43 44 46 47 51 100 107 122 123 131 156 162 164 179
    ")" <str> (294) 42 43 44 46 47 51 100 107 122 123 131 156 157 162 164 179
    ";" <str> (295) 10 23 69 84 91 98 99 110 111 136 137 149 150 151 152 164 167 168 169
    "." <str> (296) 50
    "," <str> (297) 24 54 65 85 103 112 127
    "=" <str> (298) 26 56 57 115
    ":" <str> (299) 71 75 77 78
    "[" <str> (300) 21 22 49 64
    "]" <str> (301) 21 22 49 64
    "&" <str> (302) 106 130
    "{" <str> (303) 28 70 92 93 119 120 121 177 178
    "}" <str> (304) 28 70 92 119 120 121 177 178
    "::" <str> (305) 126
    ">>" <str> (306) 168 170
    "<<" <str> (307) 169 173
    "IDENTIFIER" <str> (308) 10 12 26 50 52 69 71 87 88 101 102 110 124 125 126 130
    "ICONST" <str> (309) 21 62
    "FCONST" <str> (310) 63
    "CCONST" <str> (311) 61
    "list function" <str> (312) 51
    "string" <str> (313) 29 57 176
    LOWER_THAN_ELSE (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program <str> (61)
        on left: 1
        on right: 0
    global_declarations <str> (62)
        on left: 2 3
        on right: 1 2
    global_declaration <str> (63)
        on left: 4 5 6 7 8 9
        on right: 2
    typedef_declaration <str> (64)
        on left: 10
        on right: 4
    typename <str> (65)
        on left: 11 12
        on right: 10 23 84 101 103 104 111 124 127 128 136 137
    standard_type <str> (66)
        on left: 13 14 15 16
        on right: 11 47
    listspec <str> (67)
        on left: 17 18
        on right: 10 105
    dims <str> (68)
        on left: 19 20
        on right: 10 19 26 87 88 105
    dim <str> (69)
        on left: 21 22
        on right: 19
    const_declaration <str> (70)
        on left: 23
        on right: 5
    constdefs <str> (71)
        on left: 24 25
        on right: 23 24
    constdef <str> (72)
        on left: 26
        on right: 24 25
    init_value <str> (73)
        on left: 27 28 29
        on right: 26 65 66 115
    expression <str> (74)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 27 30 31 32 33 34 35 36 37 38 58
    variable <str> (75)
        on left: 49 50 51 52 53
        on right: 40 41 42 49 50 56 57 172
    general_expression <str> (76)
        on left: 54 55
        on right: 43 44 46 49 51 54 59 152 153 156 157 162 165 175
    assignment <str> (77)
        on left: 56 57 58
        on right: 55 56
    expression_list <str> (78)
        on left: 59 60
        on right: 42 64
    constant <str> (79)
        on left: 61 62 63
        on right: 45
    listexpression <str> (80)
        on left: 64
        on right: 48
    init_values <str> (81)
        on left: 65 66
        on right: 28 65
    class_declaration <str> (82)
        on left: 69
        on right: 6
    $@1 (83)
        on left: 67
        on right: 69
    $@2 (84)
        on left: 68
        on right: 69
    class_body <str> (85)
        on left: 70
        on right: 69
    parent <str> (86)
        on left: 71 72
        on right: 70
    members_methods <str> (87)
        on left: 73 74
        on right: 70 73
    access <str> (88)
        on left: 75 76 77 78 79
        on right: 73 74
    member_or_method <str> (89)
        on left: 80 81
        on right: 73 74
    member <str> (90)
        on left: 82 83
        on right: 80
    var_declaration <str> (91)
        on left: 84
        on right: 82 96
    variabledefs <str> (92)
        on left: 85 86
        on right: 84 85 136 137
    variabledef <str> (93)
        on left: 87 88
        on right: 85 86 114 129
    anonymous_union <str> (94)
        on left: 91
        on right: 83
    $@3 (95)
        on left: 89
        on right: 91
    $@4 (96)
        on left: 90
        on right: 91
    union_body <str> (97)
        on left: 92 93
        on right: 91 110
    fields <str> (98)
        on left: 94 95
        on right: 92 93 94
    field <str> (99)
        on left: 96
        on right: 94 95
    method <str> (100)
        on left: 97
        on right: 81
    short_func_declaration <str> (101)
        on left: 98 99
        on right: 97 117
    short_par_func_header <str> (102)
        on left: 100
        on right: 98
    func_header_start <str> (103)
        on left: 101 102
        on right: 100 107 123
    parameter_types <str> (104)
        on left: 103 104
        on right: 100 103
    pass_list_dims <str> (105)
        on left: 105 106
        on right: 103 104
    nopar_func_header <str> (106)
        on left: 107
        on right: 99 121
    union_declaration <str> (107)
        on left: 110
        on right: 7
    $@5 (108)
        on left: 108
        on right: 110
    $@6 (109)
        on left: 109
        on right: 110
    global_var_declaration <str> (110)
        on left: 111
        on right: 8
    init_variabledefs <str> (111)
        on left: 112 113
        on right: 111 112
    init_variabledef <str> (112)
        on left: 114
        on right: 112 113
    initializer <str> (113)
        on left: 115 116
        on right: 114
    func_declaration <str> (114)
        on left: 117 118
        on right: 9
    full_func_declaration <str> (115)
        on left: 119 120 121
        on right: 118
    full_par_func_header <str> (116)
        on left: 122 123
        on right: 119
    class_func_header_start <str> (117)
        on left: 124 125
        on right: 122 131
    func_class <str> (118)
        on left: 126
        on right: 124 125
    parameter_list <str> (119)
        on left: 127 128
        on right: 122 123 127
    pass_variabledef <str> (120)
        on left: 129 130
        on right: 127 128
    nopar_class_func_header <str> (121)
        on left: 131
        on right: 120
    decl_statements <str> (122)
        on left: 132 133 134 135
        on right: 119 120 121 177 178
    declarations <str> (123)
        on left: 136 137
        on right: 132 133 136
    decltype <str> (124)
        on left: 138 139
        on right: 52 136 137
    statements <str> (125)
        on left: 140 141
        on right: 132 134 140
    statement <str> (126)
        on left: 142 143 144 145 146 147 148 149 150 151
        on right: 140 141 156 157 159 162 164
    expression_statement <str> (127)
        on left: 152 153
        on right: 142
    if_statement <str> (128)
        on left: 156 157
        on right: 143
    $@7 (129)
        on left: 154
        on right: 156
    $@8 (130)
        on left: 155
        on right: 156
    if_tail <str> (131)
        on left: 159 160
        on right: 156 157
    $@9 (132)
        on left: 158
        on right: 159
    while_statement <str> (133)
        on left: 162
        on right: 144
    $@10 (134)
        on left: 161
        on right: 162
    for_statement <str> (135)
        on left: 164
        on right: 145
    $@11 (136)
        on left: 163
        on right: 164
    optexpr <str> (137)
        on left: 165 166
        on right: 164 167
    return_statement <str> (138)
        on left: 167
        on right: 146
    io_statement <str> (139)
        on left: 168 169
        on right: 147
    in_list <str> (140)
        on left: 170 171
        on right: 168 170
    in_item <str> (141)
        on left: 172
        on right: 170 171
    out_list <str> (142)
        on left: 173 174
        on right: 169 173
    out_item <str> (143)
        on left: 175 176
        on right: 173 174
    comp_statement <str> (144)
        on left: 177
        on right: 148
    main_function <str> (145)
        on left: 178
        on right: 1
    main_header <str> (146)
        on left: 179
        on right: 178


State 0

    0 $accept: • program "EOF"

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program • "EOF"

    "EOF"  shift, and go to state 3


State 2

    1 program: global_declarations • main_function
    2 global_declarations: global_declarations • global_declaration

    "typedef"     shift, and go to state 4
    "char"        shift, and go to state 5
    "int"         shift, and go to state 6
    "float"       shift, and go to state 7
    "const"       shift, and go to state 8
    "union"       shift, and go to state 9
    "class"       shift, and go to state 10
    "void"        shift, and go to state 11
    "list"        shift, and go to state 12
    "IDENTIFIER"  shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    const_declaration        go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


State 3

    0 $accept: program "EOF" •

    $default  accept


State 4

   10 typedef_declaration: "typedef" • typename listspec "IDENTIFIER" dims ";"

    "char"        shift, and go to state 5
    "int"         shift, and go to state 33
    "float"       shift, and go to state 7
    "void"        shift, and go to state 11
    "IDENTIFIER"  shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


State 5

   13 standard_type: "char" •

    $default  reduce using rule 13 (standard_type)


State 6

   14 standard_type: "int" •
  179 main_header: "int" • "main" "(" ")"

    "main"  shift, and go to state 35

    $default  reduce using rule 14 (standard_type)


State 7

   15 standard_type: "float" •

    $default  reduce using rule 15 (standard_type)


State 8

   23 const_declaration: "const" • typename constdefs ";"

    "char"        shift, and go to state 5
    "int"         shift, and go to state 33
    "float"       shift, and go to state 7
    "void"        shift, and go to state 11
    "IDENTIFIER"  shift, and go to state 13

    typename       go to state 36
    standard_type  go to state 17


State 9

  110 union_declaration: "union" • "IDENTIFIER" $@5 union_body $@6 ";"

    "IDENTIFIER"  shift, and go to state 37


State 10

   69 class_declaration: "class" • "IDENTIFIER" $@1 class_body $@2 ";"

    "IDENTIFIER"  shift, and go to state 38


State 11

   16 standard_type: "void" •

    $default  reduce using rule 16 (standard_type)


State 12

  102 func_header_start: "list" • "IDENTIFIER"
  125 class_func_header_start: "list" • func_class "IDENTIFIER"

    "IDENTIFIER"  shift, and go to state 39

    func_class  go to state 40


State 13

   12 typename: "IDENTIFIER" •

    $default  reduce using rule 12 (typename)


State 14

    2 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 2 (global_declarations)


State 15

    4 global_declaration: typedef_declaration •

    $default  reduce using rule 4 (global_declaration)


State 16

  101 func_header_start: typename • "IDENTIFIER"
  111 global_var_declaration: typename • init_variabledefs ";"
  124 class_func_header_start: typename • func_class "IDENTIFIER"

    "list"        shift, and go to state 41
    "IDENTIFIER"  shift, and go to state 42

    variabledef        go to state 43
    init_variabledefs  go to state 44
    init_variabledef   go to state 45
    func_class         go to state 46


State 17

   11 typename: standard_type •

    $default  reduce using rule 11 (typename)


State 18

    5 global_declaration: const_declaration •

    $default  reduce using rule 5 (global_declaration)


State 19

    6 global_declaration: class_declaration •

    $default  reduce using rule 6 (global_declaration)


State 20

  117 func_declaration: short_func_declaration •

    $default  reduce using rule 117 (func_declaration)


State 21

   98 short_func_declaration: short_par_func_header • ";"

    ";"  shift, and go to state 47


State 22

  100 short_par_func_header: func_header_start • "(" parameter_types ")"
  107 nopar_func_header: func_header_start • "(" ")"
  123 full_par_func_header: func_header_start • "(" parameter_list ")"

    "("  shift, and go to state 48


State 23

   99 short_func_declaration: nopar_func_header • ";"
  121 full_func_declaration: nopar_func_header • "{" decl_statements "}"

    ";"  shift, and go to state 49
    "{"  shift, and go to state 50


State 24

    7 global_declaration: union_declaration •

    $default  reduce using rule 7 (global_declaration)


State 25

    8 global_declaration: global_var_declaration •

    $default  reduce using rule 8 (global_declaration)


State 26

    9 global_declaration: func_declaration •

    $default  reduce using rule 9 (global_declaration)


State 27

  118 func_declaration: full_func_declaration •

    $default  reduce using rule 118 (func_declaration)


State 28
